tests/basic/eq/let_eq_int_01.pan
eq : (a:â„¤) â†’ (b:â„¤) â†’ { c:ğ”¹ | c = true âŸº a = b }

f02 : {v:bool|v=false}
f02 = let x = 1 in eq x 1

f04 : {v:bool|false}
f04 = let x = 1 in eq x 1


f12 : {v:bool|v=false}
f12 = let x = 1 in eq 1 x

f14 : {v:bool|false}
f14 = let x = 1 in eq 1 x
